* Add Note
* Manage view_ids on tree view
* Use Apple key for copy/past of list

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Use italic labels for editable fields
* Escape '_' in button string and page string
* Export selected records only
* Use HTML for RichText widget
* Change Progressbar to work with float between 0 and 1
* Add Fast Tabbing option
* Remove colors on widgets
* Bold label of required fields
* Explicit error message for invalid record
* Add reversed operators to PYSON expressions

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Hide columns containing always the same value
* Remove Tabs Position option
* Manage product attribute
* Remove float_time widget
* Add TimeDelta field
* Improve date/time widgets
* Remove datetime widget on list/tree view
* Allow to put many times the same field on tree view
* Add search completion on dictionary widget
* Merge host and port field in profile editor
* New color scheme for graph
* Replace img_{width,height} by width and height attributes

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add DnD on export window
* Allow to overide predefined export
* Prefill export window with current view fields
* Manage field context on Group value
* Add export of selection string
* Load plugins from local user directory
* Manage tree_state attribute
* Add simple tree_state support on form view
* Change range operator of search widget to be included
* Explicitly set value of parent field

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Add option to show revisions
* Add a multi selection widget for many2many
* Remove auto-refresh
* Add support of domain for non-relation field
* Allow drag & drop on the attachment button
* Replace sha widget by password
* Add Len to PYSON
* Use a pool of connection
* Manage client actions from button and wizard
* Add tree_invisible attribute to button in tree view