@@ -21,7 +21,7 @@ class Window(object):
     @staticmethod
     def create(view_ids, model, res_id=False, domain=None,
             context=None, order=None, mode=None, name=False, limit=None,
-            search_value=None, icon=None, tab_domain=None):
+            search_value=None, icon=None, tab_domain=None, context_model=None):
         from tryton.gui import Main
         if context is None:
             context = {}
@@ -30,7 +30,8 @@ class Window(object):
             from form import Form
             win = Form(model, res_id, domain, order=order, mode=mode,
                 view_ids=(view_ids or []), context=context, name=name,
-                limit=limit, search_value=search_value, tab_domain=tab_domain)
+                limit=limit, search_value=search_value, tab_domain=tab_domain,
+                context_model=context_model)
         else:
             from board import Board
             win = Board(model, view_ids and view_ids[0] or None,
